Bug 360663 - The progress bar shown on the layer doesn't get cleared after operation is completed , instead it gets stuck at 0% thus hiding the layer icons
Summary: The progress bar shown on the layer doesn't get cleared after operation is co...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Layer Stack (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-03-17 14:11 UTC by Raghavendra kamath
Modified: 2016-04-04 13:55 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
stuck progress bar (10.39 KB, image/png)
2016-03-22 15:04 UTC, Halla Rempt
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Raghavendra kamath 2016-03-17 14:11:07 UTC
The progress bar shown on the layer doesn't get cleared after operation is completed , instead it gets stuck at 0% thus hiding the layer icons like alpha and locks.

you can see the screenshot here-> https://dl.dropboxusercontent.com/u/37777793/layer-progressbar.png

this happens mostly to copy pasted or duplicated layer, this is also noticed on gmic output layer

Reproducible: Sometimes
Comment 1 Storm Engineer 2016-03-18 22:11:56 UTC
Happens for me too every now and then. I have to close and reopen document to fix it.

Arch Linux + KDE; Built from git
Comment 2 Halla Rempt 2016-03-22 15:04:08 UTC
Created attachment 98026 [details]
stuck progress bar

Saved the image to the bug
Comment 3 Dmitry Kazakov 2016-04-04 10:25:10 UTC
Ok I reproduced it:

1) Duplicate a layer
2) Filter->Blur

Applying Fill Tool on a layer doesn't solve the progress bar problem :(
Comment 4 Dmitry Kazakov 2016-04-04 13:55:18 UTC
Git commit 0a779219639175202c18e05585855fbd77c891d6 by Dmitry Kazakov.
Committed on 04/04/2016 at 13:54.
Pushed by dkazakov into branch 'master'.

Fix progress updates of the Duplicated layers

The progress proxy should be created/moved in the main GUI thread
to be able to create timers and send deleteLater() signals.

Fixes T2088

M  +10   -7    libs/image/kis_busy_progress_indicator.cpp
M  +4    -0    libs/image/kis_node.cpp
M  +2    -2    libs/image/kis_node_progress_proxy.cpp

http://commits.kde.org/krita/0a779219639175202c18e05585855fbd77c891d6