Fix progress updates of the Duplicated layers

The progress proxy should be created/moved in the main GUI thread
to be able to create timers and send deleteLater() signals.

Fixes T2088
BUG:360663